--- a/views/content/team.html
+++ b/views/content/team.html
@@ -23,8 +23,8 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Vibha Rane</h3>
               <h4 class="brand-primary font-semibold">Head of Operations, Senior Nutritionist</h4>
-              <p>Nutritionist Vibha is Selfcare’s second employee, having joined in 2002.</p>
-              <p>A B.Com graduate from Mumbai’s Hinduja College, she is armed with an additional diploma in Software Designing from SSI. Vibha also holds a diploma in Nutrition &amp; Dietetics and a Certificate in an advance course of Nutrition. Her work profile at Selfcare includes administration, accounts, handling legal matters, visiting branch offices for training nutritionists, updating new policies and information, as well as consulting clients from Selfcare’s Tardeo branch.</p>
+              <p>Vibha joined us in 2002 and is Selfcare’s oldest employee</p>
+              <p>She is a B.Com graduate from Mumbai’s Hinduja College and she has armed an additional diploma in Software Designing from SSI. Vibha is also a certified nutritionist and holds a diploma in Nutrition &amp; Dietetics. Her work profile at Selfcare includes consulting clients, administration, accounts, handling legal matters, training nutritionists, updating new policies and information. Vibha’s favorite way to exercise is dancing. She also enjoys long walks by the seaside.</p>
               <p>Vibha’s favorite way to exercise is dancing. She also enjoys long walks at the seaside.</p>
             </div>
           </div>
@@ -43,7 +43,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Adity Killa</h3>
               <h4 class="brand-primary font-semibold">Senior Nutritionist, Kolkata Branch Head</h4>
-              <p>Adity became a part of Selfcare in the year 2005. A graduate in Political Science and a diploma holder in Nutrition and Dietetics is not all that sets Adity apart from others in her city. She brings to the table warmth, empathy and dynamism and is also a certified Clinical Nutritionist.</p>
+              <p>Adity became a part of Selfcare in the year 2005. She is certified Clinical Nutritionist and has done her graduation in Political Science along with a diploma in Nutrition and Dietetics, which sets Adity apart from others.She brings to the table warmth, empathy and dynamism.</p>
               <p>When Adity is not managing the branch or bringing in business, she loves to read and cook.</p>
             </div>
           </div>
@@ -81,7 +81,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Nidhi Agarwal</h3>
               <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
-              <p>Nidhi has been with Selfcare since 2011. She has done her Masters in Clinical Nutrition and Dietetics, She consults clients at Tardeo and Juhu and is also involved in online consultations. In her leisure time Nidhi enjoys listening to music, reading books about nutrition.</p>
+              <p>Nidhi has been with Selfcare since 2011. She has done her Masters in Clinical Nutrition and Dietetics. She consults clients at Tardeo and Juhu and is also involved in online consultations. In her leisure time Nidhi enjoys listening to music, reading books about nutrition.</p>
             </div>
           </div>
         </div>
@@ -99,8 +99,8 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Shaikh Mona Afroz</h3>
               <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
-              <p>Mona began working at Selfcare in 2011. After completing her graduation in Microbiology from G.N. Khalsa College (Mumbai) she achieved her postgraduate diploma in Nutrition and Dietetics from SNDT College (Juhu). She also completed a three-month internship at Nanavati Hospital (Vile Parle, Mumbai).</p>
-              <p>She consults clients at the Tardeo and Santacruz branches and is also involved in consulting online clients all over India.</p>
+              <p>Mona began working at Selfcare in 2011. After completing her graduation in Microbiology, she achieved her postgraduate diploma in Nutrition and Dietetics from SNDT College. She also completed a three-month internship at Nanavati Hospital (Vile Parle, Mumbai).</p>
+              <p>She consults clients at the Tardeo and Juhu branches and is also involved in consulting online clients all over India.</p>
               <p>Mona loves travelling and enjoys music.</p>
             </div>
           </div>
@@ -119,7 +119,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Vishakha Shah</h3>
               <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
-              <p>Vishakha joined Selfcare with her twin sister in 2012. Vishakha has done her Masters in Foods Nutrition and Dietetics from Mumbai's college of Home Science - Nirmala Niketan. She has also done an additional certificate course in Nutrition, Exercise and Fitness, and Food Preservation and Processing.</p>
+              <p>Vishakha joined Selfcare with her twin sister in 2012. Vishakha has done her Masters in Foods Nutrition and Dietetics from Nirmala Niketan. She has also done an additional certificate course in Nutrition, Exercise and Fitness, and Food Preservation and Processing.</p>
               <p>She consults clients at Selfcare’s Tardeo branch.</p>
               <p>Vishakha is a big foodie; she loves to prepare different cuisines and coffee. She enjoys aerobics and belly dancing.</p>
             </div>
@@ -270,6 +270,85 @@
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
+              <img src="img/team/Shazia-Gupta.png" alt="" class="img-responsive round">
+            </div>
+          </div>
+
+          <div class="col-md-10 col-sm-9">
+            <div class="member-detail">
+              <h3 class="brand-brown-dark font-semibold">Shazia Gupta</h3>
+              <h4 class="brand-primary font-semibold">Nutritionist</h4>
+              <p>Nutritionist Shazia Gupta worked with Selfcare from June 2005 to 2010, followed by a short break. But her love for counselling made her join Selfcare again in 2016. She has pursued her B.Sc in chemistry from K.C.College followed by a Diploma in Nutrition and Dietetics from SNDT. She is also a certified fitness trainer and a yoga instructor.</p>
+              <p>She consults at both the Tardeo and Juhu clinic.</p>
+              <p>Loves to exercise, cooking and travelling.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="single-member">
+        <div class="row">
+          <div class="col-md-2 col-sm-3">
+            <div class="member-image round">
+              <img src="img/team/Apeksha-Naik.png" alt="" class="img-responsive round">
+            </div>
+          </div>
+
+          <div class="col-md-10 col-sm-9">
+            <div class="member-detail">
+              <h3 class="brand-brown-dark font-semibold">Apeksha Naik</h3>
+              <h4 class="brand-primary font-semibold">Nutritionist</h4>
+              <p>Apeksha's passion for everything healthy is what brought her to Selfcare. A graduate in Hotel Management and Catering operations followed by a Course in Nutrition and Health Management.</p>
+              <p>She consults clients at the Tardeo clinic and is also involved in online consultations.</p>
+              <p>She loves cooking, travelling and is known for her bright smile.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="single-member">
+        <div class="row">
+          <div class="col-md-2 col-sm-3">
+            <div class="member-image round">
+              <img src="img/team/Nirali-Tanna.png" alt="" class="img-responsive round">
+            </div>
+          </div>
+
+          <div class="col-md-10 col-sm-9">
+            <div class="member-detail">
+              <h3 class="brand-brown-dark font-semibold">Nirali Tanna</h3>
+              <h4 class="brand-primary font-semibold">Nutritionist</h4>
+              <p>Nutritionist Nirali made an entry into Selfcare family in the year 2016. Her academics include a Graduation in Food, Nutrition and Dietetics followed by a Post Graduation in Food Processing and Preservation.</p>
+              <p>She counsels clients at the Tardeo clinic and is involved in churning our healthy tiffins.</p>
+              <p>In her leisure time she engages herself by reading, trying new recipes and loves feeding people.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="single-member">
+        <div class="row">
+          <div class="col-md-2 col-sm-3">
+            <div class="member-image round">
+              <img src="img/team/Dr-Divya-Sharma.png" alt="" class="img-responsive round">
+            </div>
+          </div>
+
+          <div class="col-md-10 col-sm-9">
+            <div class="member-detail">
+              <h3 class="brand-brown-dark font-semibold">Divya Sharma</h3>
+              <h4 class="brand-primary font-semibold">Doctor</h4>
+              <p>Dr. Divya Sharma joined Selfcare in 2016. She completed her graduation from Baba Farid University, Punjab and her post graduation from IILM University, New Delhi.</p>
+              <p>She handles Coolsculpting technology at Selfcare, which includes the assessment, treatment and post care of the procedure. She is well aware on how to handle patients with the utmost care. Her areas of interest are Fat Reduction, Body Contouring and Body Tightening.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="single-member">
+        <div class="row">
+          <div class="col-md-2 col-sm-3">
+            <div class="member-image round">
               <img src="img/team/cinthia.jpg" alt="" class="img-responsive round">
             </div>
           </div>
@@ -315,10 +394,48 @@
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
+              <h3 class="brand-brown-dark font-semibold">Kabita Singh</h3>
+              <h4 class="brand-primary font-semibold">Front Desk Manager</h4>
+              <p>Kabita is working with Selfcare since 2007. She has pursued certificate course in Clinical Nutrition and Dietetics. She is handling front desk and administration in Kolkata clinics.</p>
+              <p>She loves to spend time with children’s and enjoy listening music.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="single-member">
+        <div class="row">
+          <div class="col-md-2 col-sm-3">
+            <div class="member-image round">
+              <img src="img/team/kabita.jpg" alt="" class="img-responsive round">
+            </div>
+          </div>
+
+          <div class="col-md-10 col-sm-9">
+            <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Kabita</h3>
               <h4 class="brand-primary font-semibold">Front Desk Manager</h4>
               <p>Kabita is working with selfcare since 2007. She is handling Front desk and admin responsibilities in kolkata Branch. She has also completed certificate course in Clinical Nutrition and dietetics.</p>
               <p>She loves to spend time with children’s and enjoy listening music.</p>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+      <div class="single-member">
+        <div class="row">
+          <div class="col-md-2 col-sm-3">
+            <div class="member-image round">
+              <img src="img/team/nanditha.jpg" alt="" class="img-responsive round">
+            </div>
+          </div>
+
+          <div class="col-md-10 col-sm-9">
+            <div class="member-detail">
+              <h3 class="brand-brown-dark font-semibold">Nanditha Enagandula</h3>
+              <h4 class="brand-primary font-semibold">Sales Executive</h4>
+              <p>Nandhita joined Selfcare in 2010. She has done her B.A. from Hyderabad’s Osmania University and is the Sales Executive at Selfcare’s Tardeo office.</p>
+              <p>She likes reading books and listening to music.</p>
             </div>
           </div>
         </div>
