--- a/views/content/team.html
+++ b/views/content/team.html
@@ -270,7 +270,7 @@
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
-              <img src="img/team/Shazia-Gupta.png" alt="" class="img-responsive round">
+              <img src="img/team/shazia.png" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -290,7 +290,7 @@
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
-              <img src="img/team/Apeksha-Naik.png" alt="" class="img-responsive round">
+              <img src="img/team/apeksha.png" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -310,7 +310,7 @@
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
-              <img src="img/team/Nirali-Tanna.png" alt="" class="img-responsive round">
+              <img src="img/team/nirali.png" alt="" class="img-responsive round">
             </div>
           </div>
 
@@ -330,7 +330,7 @@
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
-              <img src="img/team/Dr-Divya-Sharma.png" alt="" class="img-responsive round">
+              <img src="img/team/divya.png" alt="" class="img-responsive round">
             </div>
           </div>
 
