--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -1086,15 +1086,20 @@ $side-menu-width: 390px;
   @include transform(translate(-50%, -50%));
   z-index: 99;
   .alert {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    border: none;
+    font-size: 22px;
     &.alert-success {
-      color: white;
-      background-color: $brand-success;
+      background-color: #fff;
+      color: #000;
+      border: 2px solid $brand-primary;
     }
     &.alert-danger {
-      color: white;
-      background-color: #A94442;
+      background-color: #fff;
+      color: #000;
+      border: 2px solid $brand-primary;
+    }
+    .close {
+      color: $brand-primary;
+      opacity: 1;
     }
   }
 }
