--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -466,7 +466,7 @@
                         <div class="shipping">
                            <div class="row">
                               <div class="col-md-6">
-                                 <p class="brand-primary letter-space">Free shipping in Mumbai and Kolkata,</p>
+                                 <p class="brand-primary letter-space">Free shipping in Mumbai on orders above Rs. 500,</p>
                                  <p class="brand-primary letter-space">Standard shipping rates apply across other cities in India.</p>
                               </div>
                               <div class="col-md-6">
