--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -13,8 +13,8 @@
   <div class="products">
     <div class="container">
       <div class="alert-postion">
-              <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
-          </div>
+        <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
+      </div>
       <div class="row">
 
         <div class="col-md-3 col-sm-4">
@@ -27,7 +27,7 @@
             <h3 class="text-uppercase brand-brown-dark font-semibold">Filters by</h3>
 
             <div class="protein" ng-repeat="subcategory in subCategories" ng-if="subCategories.length > 0">
-              <div class="checkbox" >
+              <div class="checkbox">
                 <input type="checkbox" id="{{subcategory.name | nospace | lowercase}}" ng-click="filterIt(subcategory.id)">
                 <label class="white" for="{{subcategory.name | nospace | lowercase}}">
                   <span></span>{{subcategory.name}}</label>
@@ -56,7 +56,7 @@
                   <span class="text-uppercase">{{product.name}}</span> |
                   <span><i class="fa fa-inr"></i> {{product.price}}</span>
                 </p>
-                <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.id)">Add to cart</a>
+                <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.id)" data-target="#successcart" data-toggle="modal">Add to cart</a>
               </div>
             </div>
           </div>
@@ -65,3 +65,19 @@
     </div>
   </div>
 </section>
+<div class="successcart">
+  <div class="modal fade" id="successcart" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content text-center">
+        <div class="modal-body">
+          <button type="button" class="close" data-dismiss="modal"><i class="fa fa-close"></i></button>
+          <h3>Your product has been added to the cart, successfully!</h3>
+          <div class="success-btn">
+            <a href="#/healthproducts/1" class="btn btn-primary text-uppercase continue" data-dismiss="modal">Continue Shopping</a>
+            <a class="btn btn-primary text-uppercase">Proceed to checkout</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
