--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -56,7 +56,7 @@
                   <span class="text-uppercase">{{product.name}}</span> |
                   <span><i class="fa fa-inr"></i> {{product.price}}</span>
                 </p>
-                <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.id)" data-target="#successcart" data-toggle="modal">Add to cart</a>
+                <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.id)"  data-toggle="modal">Add to cart</a>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
           <h3>Your product has been added to the cart, successfully!</h3>
           <div class="success-btn">
             <a href="#/healthproducts/1" class="btn btn-primary text-uppercase continue" data-dismiss="modal">Continue Shopping</a>
-            <a class="btn btn-primary text-uppercase">Proceed to checkout</a>
+            <a class="btn btn-primary text-uppercase" ui-sref="checkout">Proceed to checkout</a>
           </div>
         </div>
       </div>
