--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -74,7 +74,7 @@
           <h3>Your product has been added to the cart, successfully!</h3>
           <div class="success-btn">
             <a href="#/healthproducts/1" class="btn btn-primary text-uppercase continue" data-dismiss="modal">Continue Shopping</a>
-            <a class="btn btn-primary text-uppercase" ui-sref="checkout">Proceed to checkout</a>
+            <a class="btn btn-primary text-uppercase" ng-click="closeToCheckout()">Proceed to checkout</a>
           </div>
         </div>
       </div>
