--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -568,7 +568,7 @@
                                     <tr>
                                        <td>Billing Zip :</td>
                                        <td>
-                                          <input type="number" name="billing_zip" style="border: none; width: 100%;" ng-model="checkout.billingpincode" />
+                                          <input type="tel" name="billing_zip" style="border: none; width: 100%;" ng-model="checkout.billingpincode" />
                                        </td>
                                     </tr>
                                     <tr>
