--- a/views/content/knowyourstats.html
+++ b/views/content/knowyourstats.html
@@ -153,6 +153,96 @@
                   <a href="" class="btn btn-primary text-uppercase no-radius calorie-btn">calculate bmi</a>
                 </div>
               </div>
+              <div class="bmi-result">
+                <div class="scroll-stats">
+                  <div class="result-bar relate">
+                    <div class="progress">
+                      <div class="progress-bar severly severly-under same-progressdata">
+                        <span>SEVERLY UNDERWEIGHT</span>
+                      </div>
+                      <div class="progress-bar under same-progressdata">
+                        <span>UNDER WEIGHT</span>
+                      </div>
+                      <div class="progress-bar normal same-progressdata">
+                        <span>NORMAL</span>
+                      </div>
+                      <div class="progress-bar over same-progressdata">
+                        <span>OVERWEIGHT</span>
+                      </div>
+                      <div class="progress-bar severly obese same-progressdata">
+                        <span>OBESE</span>
+                      </div>
+                    </div>
+                    <div class="progress-calcu brand-primary-bg">
+                      <div class="bmi-ans">
+                        <span class="inline-block text-uppercase urbmi">your bmi</span>
+                        <span class="resultcal">24.2</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="resultbar-detail">
+                  <h4 class="text-uppercase">We recommended you to join our following program :</h4>
+                  <div class="bmi-package">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div class="package-name bmi-health text-center">
+                          <span class="text-uppercase brand-primary">Health management</span>
+                        </div>
+                      </div>
+                      <div class="col-md-7">
+                        <div class="package-descp bmi-healthdescp">
+                          <p>Select any one of the programmes we offer to help boost your immunity and to obtain specific guidance on general health concerns.</p>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="text-center package-more">
+                          <button class="btn btn-primary no-radius text-uppercase" ui-sref="healthmanagement">know more</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bmi-package">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div class="package-name bmi-weight text-center">
+                          <span class="text-uppercase">weight <br>loss</span>
+                        </div>
+                      </div>
+                      <div class="col-md-7">
+                        <div class="package-descp">
+                          <p>Your health and immunity are as important as your weight loss goals. Along with the diet, blood tests and diet plans, a well-planned exercise schedule is also crafted to address specific health issues. Most importantly, we believe it's vital to achieve optimal weight for better long term health and to keep it off thereafter. Click on the link and take a look at the programmes we offer.</p>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="text-center package-more">
+                          <button class="btn btn-primary no-radius text-uppercase" ui-sref="weightmanagement">know more</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bmi-package">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div class="package-name bmi-cool text-center">
+                          <span class="text-uppercase">cool <br>sculpting</span>
+                        </div>
+                      </div>
+                      <div class="col-md-7">
+                        <div class="package-descp">
+                          <p>The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared program to use controlled cooling to safely target and eliminate diet and exercise resistant fat. CoolSculpting results are proven, noticeable, and lasting, so you'll look and feel great from every angle. Click here to know more about the procedure.
+</p>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="text-center package-more">
+                          <button class="btn btn-primary no-radius text-uppercase" ui-sref="coolsculpting">know more</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </uib-accordion-group>
           </uib-accordion>
         </div>
