--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2646,6 +2646,130 @@ footer {
     margin: 0 15px 0 0;
   }
 }
+.scroll-stats {
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+.result-bar {
+  width: 903px;
+  .progress {
+    height: 60px;
+    margin-top: 100px;
+    overflow: visible;
+    span { font-size: 13px; }
+  }
+}
+.severly {
+  width: 25%;
+  padding: 20px;
+  background-color: $brand-brown;
+}
+.same-progressdata {
+  position: relative;
+  &:before,
+  &:after {
+    position: absolute;
+    color: #000;
+    font-size: 15px;
+    top: 65px;
+  }
+}
+.severly-under {
+  &:before {
+    content: "0";
+    left: -2px;
+  }
+  &:after {
+    content: "16";
+    left: 98%;
+  }
+}
+.under {
+  width: 13%;
+  padding: 10px 16px;
+  background-color: $brand-primary;
+  &:after {
+    content: "18";
+    left: 95%;
+  }
+}
+.normal {
+  width: 20%;
+  padding: 20px;
+  background-color: #3cb390;
+  &:after {
+    content: "25";
+    left: 96%;
+  }
+}
+.over {
+  width: 17%;
+  padding: 20px;
+  background-color: $brand-primary;
+  &:after {
+    content: "30";
+    left: 96%;
+  }
+}
+.obese {
+  &:after {
+    content: "45";
+    right: -2px;
+  }
+}
+.resultbar-detail {
+  margin: 50px 0;
+  button { padding: 6px 16px; }
+}
+.bmi-package { margin: 30px 0; }
+.package-name {
+  @include square(100px);
+  border-radius: 100%;
+  line-height: 105px;
+  span {
+    display: inline-block;
+    font-size: 11px;
+    line-height: 100%;
+  }
+}
+.bmi-healthdescp { margin: 20px 0; }
+.bmi-health { border: 1px solid $brand-primary; }
+.bmi-weight {
+  border: 1px solid #3cb390;
+  color: #3cb390;
+}
+.bmi-cool {
+  border: 1px solid $brand-brown;
+  color: $brand-brown;
+}
+.package-more { margin: 30px 0; }
+.progress-calcu {
+  color: #fff;
+  position: absolute;
+  top: -90px;
+  left: 52%;
+  border-radius: 100%;
+.bmi-ans {
+    @include square(80px);
+    display: inline-block;
+    text-align: center;
+  &:after{
+    content: "";
+    @include size(80px,3px);
+    background-color: $brand-primary;
+    margin-top: 85px;
+    position: absolute;
+    left: 0;
+    @include transform(rotate(90deg));
+  }
+  .urbmi {
+    padding: 15px 0px 0px;
+    border-bottom: 1px solid #fff;
+    font-size: 11px;
+  }
+  .resultcal { font-size: 25px; }
+ }
+}
 ///end stats//
 // image consulting //
 .consulting {
