--- a/views/content/knowyourstats.html
+++ b/views/content/knowyourstats.html
@@ -154,29 +154,31 @@
                 </div>
               </div>
               <div class="bmi-result">
-                <div class="scroll-stats">
-                  <div class="result-bar relate">
-                    <div class="progress">
-                      <div class="progress-bar severly severly-under same-progressdata">
-                        <span>SEVERLY UNDERWEIGHT</span>
+                <div class="custom-scroll">
+                  <div class="scroll-stats">
+                    <div class="result-bar relate">
+                      <div class="progress">
+                        <div class="progress-bar severly severly-under same-progressdata">
+                          <span>SEVERLY UNDERWEIGHT</span>
+                        </div>
+                        <div class="progress-bar under same-progressdata">
+                          <span>UNDER WEIGHT</span>
+                        </div>
+                        <div class="progress-bar normal same-progressdata">
+                          <span>NORMAL</span>
+                        </div>
+                        <div class="progress-bar over same-progressdata">
+                          <span>OVERWEIGHT</span>
+                        </div>
+                        <div class="progress-bar severly obese same-progressdata">
+                          <span>OBESE</span>
+                        </div>
                       </div>
-                      <div class="progress-bar under same-progressdata">
-                        <span>UNDER WEIGHT</span>
-                      </div>
-                      <div class="progress-bar normal same-progressdata">
-                        <span>NORMAL</span>
-                      </div>
-                      <div class="progress-bar over same-progressdata">
-                        <span>OVERWEIGHT</span>
-                      </div>
-                      <div class="progress-bar severly obese same-progressdata">
-                        <span>OBESE</span>
-                      </div>
-                    </div>
-                    <div class="progress-calcu brand-primary-bg">
-                      <div class="bmi-ans">
-                        <span class="inline-block text-uppercase urbmi">your bmi</span>
-                        <span class="resultcal">24.2</span>
+                      <div class="progress-calcu brand-primary-bg">
+                        <div class="bmi-ans">
+                          <span class="inline-block text-uppercase urbmi">your bmi</span>
+                          <span class="resultcal">24.2</span>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -241,6 +243,9 @@
                       </div>
                     </div>
                   </div>
+                </div>
+                <div class="text-center">
+                  <button type="button" class="btn btn-primary no-radius">RE-CALCULATE</button>
                 </div>
               </div>
             </uib-accordion-group>
