--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2646,7 +2646,22 @@ footer {
     margin: 0 15px 0 0;
   }
 }
+.custom-scroll {
+  ::-webkit-scrollbar {
+      width: 3px;
+      height: 3px;
+  }
+  ::-webkit-scrollbar-track {
+      border-radius: 10px;
+      background-color: $brand-primary;
+  }
+  ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: #000;
+  }
+}
 .scroll-stats {
+  padding-bottom: 25px;
   overflow-x: scroll;
   overflow-y: hidden;
 }
