--- a/views/content/team.html
+++ b/views/content/team.html
@@ -61,9 +61,9 @@
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Deepti Nair</h3>
-              <h4 class="brand-primary font-semibold">Senior Nutritionist, Santacruz Branch Head</h4>
+              <h4 class="brand-primary font-semibold">Senior Nutritionist, Juhu Branch Head</h4>
               <p>Deepti has been with Selfcare since 2011. She has done her Masters in Science, PGD in Nutrition and Dietetics, certificate course in Sports Nutrition and has done a diabetes educator course.</p>
-              <p>She consults clients at Tardeo and Santacruz and is also involved in online consultations. In her leisure time Deepti enjoys listening to music, reading books about nutrition and loves to try out new recipes.</p>
+              <p>She consults clients at Tardeo and Juhu and is also involved in online consultations. In her leisure time Deepti enjoys listening to music, reading books about nutrition and loves to try out new recipes.</p>
             </div>
           </div>
         </div>
@@ -285,7 +285,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
@@ -325,7 +325,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
@@ -377,7 +377,7 @@
               <h3 class="brand-brown-dark font-semibold">Kadambari Narwane</h3>
               <h4 class="brand-primary font-semibold">Front Desk Manager</h4>
               <p>Kadambari has been with Selfcare since 2011. She completed her B.Tech. in Information Technology from S.N.D.T. University (Juhu).</p>
-              <p>She manages the front desk and sales section at Santacruz.</p>
+              <p>She manages the front desk and sales section at Juhu.</p>
               <p>She likes listening to music and enjoys travelling.</p>
             </div>
           </div>
@@ -441,24 +441,7 @@
         </div>
       </div>
 
-      <div class="single-member">
-        <div class="row">
-          <div class="col-md-2 col-sm-3">
-            <div class="member-image round">
-              <img src="img/team/nanditha.jpg" alt="" class="img-responsive round">
-            </div>
-          </div>
-
-          <div class="col-md-10 col-sm-9">
-            <div class="member-detail">
-              <h3 class="brand-brown-dark font-semibold">Nanditha Enagandula</h3>
-              <h4 class="brand-primary font-semibold">Sales Executive</h4>
-              <p>Nandhita joined Selfcare in 2010. She has done her B.A. from Hyderabad’s Osmania University and is the Sales Executive at Selfcare’s Tardeo office.</p>
-              <p>She likes reading books and listening to music.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      
 
       <!-- <div class="single-member">
         <div class="row">
