--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -3,39 +3,31 @@
     <uib-tab heading="Sign up">
       <div class="login-form">
         <form name="signupForm">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" name="firstname" class="form-control" ng-model="signup.firstname" required placeholder="First Name">
-              </div>
-              <div class="" ng-show="signupForm.firstname.$error.required && signupForm.firstname.$touched" role="alert">
-                Please enter your name.
+            <div class="row">
+              <div class="col-md-offset-2 col-md-8">
+                <div class="form-group">
+                  <input type="text" name="firstname" class="form-control" ng-model="signup.firstname" required placeholder="First Name">
+                </div>
+                <div class="" ng-show="signupForm.firstname.$error.required && signupForm.firstname.$touched" role="alert">
+                  Please enter your first name.
+                </div>
+                <div class="form-group">
+                  <input type="text" name="lastname" class="form-control" ng-model="signup.lastname" required placeholder="Last Name">
+                </div>
+                <div class="" ng-show="signupForm.lastname.$error.required && signupForm.lastname.$touched" role="alert">
+                  Please enter your last name.
+                </div>
+                <div class="form-group">
+                  <input type="email" name="email" class="form-control" ng-model="signup.email" required placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <input type="password" name="password" class="form-control" ng-model="signup.password" ng-minlength="6" required placeholder="Password">
+                </div>
+                <div class="form-group">
+                  <input type="password" name="password" class="form-control" ng-model="signup.password" ng-minlength="6" required placeholder="Confirm Password">
+                </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" name="lastname" class="form-control" ng-model="signup.lastname" required placeholder="Last Name">
-              </div>
-              <div class="" ng-show="signupForm.lastname.$error.required && signupForm.lastname.$touched" role="alert">
-                Please enter your name.
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" name="email" class="form-control" ng-model="signup.email" required placeholder="Email">
-              </div>
-
-
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="password" name="password" class="form-control" ng-model="signup.password" ng-minlength="6" required placeholder="Password">
-              </div>
-
-            </div>
-          </div>
           <div class="accept">
             <div class="checkbox">
               <input type="checkbox" ng-model="accept" ng-change="acceptIt(accept)" class="text-uppercase" id="accept">
@@ -76,7 +68,7 @@
       <div class="login-form">
         <form name="loginForm">
           <div class="row">
-            <div class="col-md-offset-3 col-md-6">
+            <div class="col-md-offset-2 col-md-8">
               <div class="form-group">
                 <input type="email" name="email" ng-model="login.email" class="form-control" required placeholder="Email">
               </div>
@@ -98,7 +90,7 @@
         </form>
         <div class="text-center text-uppercase">
           <span class="block">or</span>
-          <p>sign up via</p>
+          <p>sign in via</p>
         </div>
         <div class="social-btn text-center">
           <div class="btn-round inline-block" ng-click="facebookLogin()">
