--- a/views/header.html
+++ b/views/header.html
@@ -87,7 +87,7 @@
             </div>
             <div class="signin letter-space" ng-show="enablelogout">
               <div class="text-uppercase font-semibold relate pointer show-submenu">
-                <span class="block name brand-primary ">Hi, {{user.name | loginame | limitTo:12}}</span>
+                <span class="block name brand-primary ">Hi, {{ ::user.name | loginame | limitTo:12}}</span>
                 <ul class="account-submenu">
                   <li>
                     <a ui-sref="account()" class="text-uppercase font-semibold">My profile</a>
