--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -7,7 +7,7 @@
   </div>
   <div class="container">
     <div class="get-up brand-brown-bg relate">
-      <p class="health-descp white text-justify">At Selfcare, we individually design and monitor weight loss and health care programmes by emphasiszing well-balanced, portion-controlled diets and the importance of exercise. Your health and immunity are as important as your weight loss goals. Along
+      <p class="health-descp white text-justify">At Selfcare, we individually design and monitor weight loss and health care programmes by emphasizing well-balanced, portion-controlled diets and the importance of exercise. Your health and immunity are as important as your weight loss goals. Along
         with the diet, blood tests and diet plans, a well-planned exercise schedule is also crafted to address specific health issues. Most importantly, at Selfcare we believe its vital to achieve optimal weight for better long term health and to keep
         it off thereafter.</p>
     </div>
