changes done as per harshit told

--- a/views/content/home.html
+++ b/views/content/home.html
@@ -1,5 +1,5 @@
 <div class="home-slider">
-  <flex-slider flex-slide="slide in homeslider track by $index" animation="slide" class="carousel">
+  <flex-slider flex-slide="slide in homeslider track by $index" animation="fade" class="carousel">
     <li>
       <div class="slide-holder relate">
         <a href="{{slide.link}}">
