count fix, smooth

--- a/views/header.html
+++ b/views/header.html
@@ -76,7 +76,7 @@
               <i class="fa fa-shopping-cart brand-primary"></i>
               <div class="bagde round">
 
-                <span class="white">{{badge.Count}}</span>
+                <span class="white">{{Count}}</span>
               </div>
             </a>
           </div>
